k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1strategizer-2401076
  namespace: "2401076"
spec:
  selector:
    app: f1strategizer-2401076
  ports:
  - protocol: TCP
    port: 80
    targetPort: 40404
  type: ClusterIP
